--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:52</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;DataClean</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&lt;&lt;DataClean</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:05</td>   <td>-47670</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;DataSetup</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:52:37</td>   <td>-48496</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&gt;&gt;DataSetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:34</td>   <td>-18673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;SetupMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:52:37</td>   <td>-48015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&gt;&gt;SetupMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:34</td>   <td>-18673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;SetupMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:52:53</td>   <td>-32392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&gt;&gt;SetupMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:34</td>   <td>-18673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;SetupMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:04</td>   <td>-21294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&gt;&gt;SetupMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:48</td>   <td>-4122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.HomeTest@1da2cb77]">&gt;&gt;SetupMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:21</td>   <td>-4887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetupMethod()[pri:0, instance:testcases.HomeTest@455b6df1]">&gt;&gt;SetupMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:47</td>   <td>-5005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:52:52</td>   <td>-33149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:47</td>   <td>-5005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:04</td>   <td>-21541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:52</td>   <td>-143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.HomeTest@1da2cb77]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:20</td>   <td>-5511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>22/09/11 10:57:47</td>   <td>-5005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="e1bfe2">  <td>22/09/11 11:53:25</td>   <td>-167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod()[pri:0, instance:testcases.HomeTest@455b6df1]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>22/09/11 10:57:11</td>   <td>-41351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">Test1</td> 
+<tr bgcolor="9caeb1">  <td>22/09/11 11:52:42</td>   <td>-43029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">Test1</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>22/09/11 10:57:52</td>   <td>-146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.Test1()[pri:0, instance:testcases.HomeTest@1da2cb77]">Test1</td> 
+<tr bgcolor="f6b1bb">  <td>22/09/11 11:53:25</td>   <td>-168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.Test1()[pri:0, instance:testcases.HomeTest@455b6df1]">Test1</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>22/09/11 10:57:28</td>   <td>-24407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">Test2</td> 
+<tr bgcolor="9caeb1">  <td>22/09/11 11:52:58</td>   <td>-27404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test2()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">Test2</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>22/09/11 10:57:38</td>   <td>-14409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">Test3</td> 
+<tr bgcolor="9caeb1">  <td>22/09/11 11:53:08</td>   <td>-17383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@20c0a64d]">Test3</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
